unpackaged/main/default/objects/Case/fields/Conflict_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Field_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conflict Field 1</label>
    <type>Checkbox</type>
</CustomField>