unpackaged/main/default/objects/Case/fields/Conflict_Field_3__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Field_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conflict Field 3</label>
    <type>Checkbox</type>
</CustomField>