unpackaged/main/default/objects/Case/fields/DemoMaria__c.field-meta.xml
<CustomField>
    <fullName>DemoMaria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DemoMaria</label>
    <type>Checkbox</type>
</CustomField>