unpackaged/main/default/objects/Case/fields/Onboarding_required__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding required</label>
    <type>Checkbox</type>
</CustomField>